force-app/main/default/objects/Case/fields/Account_Classification__c.field-meta.xml
<CustomField>
    <fullName>Account_Classification__c</fullName>
    <formula>TEXT(Account.Account_Classification__c)</formula>
    <label>Account Classification</label>
    <type>Text</type>
</CustomField>