force-app/main/default/objects/Case/fields/Administrative_for_CM__c.field-meta.xml
<CustomField>
    <fullName>Administrative_for_CM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Administrative for CM</label>
    <type>Checkbox</type>
</CustomField>