force-app/main/default/objects/Case/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <description>Custom aging field for srNetwork</description>
    <formula>IF(  ISPICKVAL(Status, "Closed") ,   DATEVALUE(ClosedDate) - Requested_Completion_Date__c, Requested_Completion_Date__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Custom aging field for srNetwork.  Days left and Cycle time.</inlineHelpText>
    <label>Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>