force-app/main/default/objects/Case/fields/Opportunity_Est_Disc_Sales__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Est_Disc_Sales__c</fullName>
    <formula>CASE(LEN(TEXT(Opportunity__r.Amount)), 
1, TEXT(Opportunity__r.Amount), 
2, TEXT(Opportunity__r.Amount), 
3, TEXT(Opportunity__r.Amount), 
4, LEFT(TEXT(Opportunity__r.Amount), 1) &amp; "," &amp; RIGHT(TEXT(Opportunity__r.Amount), 3), 
5, LEFT(TEXT(Opportunity__r.Amount), 2) &amp; "," &amp; RIGHT(TEXT(Opportunity__r.Amount), 3), 
6, LEFT(TEXT(Opportunity__r.Amount), 3) &amp; "," &amp; RIGHT(TEXT(Opportunity__r.Amount), 3), 
7, LEFT(TEXT(Opportunity__r.Amount), 1) &amp; "," &amp; MID(TEXT(Opportunity__r.Amount), 2,3) &amp; "," &amp; RIGHT(TEXT(Opportunity__r.Amount), 3), 
8, LEFT(TEXT(Opportunity__r.Amount), 2) &amp; "," &amp; MID(TEXT(Opportunity__r.Amount), 3,3) &amp; "," &amp; RIGHT(TEXT(Opportunity__r.Amount), 3), 
9, LEFT(TEXT(Opportunity__r.Amount), 3) &amp; "," &amp; MID(TEXT(Opportunity__r.Amount), 4,3) &amp; "," &amp; RIGHT(TEXT(Opportunity__r.Amount), 3), 
10, LEFT(TEXT(Opportunity__r.Amount), 1) &amp; "," &amp; MID(TEXT(Opportunity__r.Amount), 2,3) &amp; "," &amp; MID(TEXT(Opportunity__r.Amount), 5, 3) &amp; "," &amp; RIGHT(TEXT(Opportunity__r.Amount), 3), 
11, LEFT(TEXT(Opportunity__r.Amount), 2) &amp; "," &amp; MID(TEXT(Opportunity__r.Amount), 3,3) &amp; "," &amp; MID(TEXT(Opportunity__r.Amount), 6, 3) &amp; "," &amp; RIGHT(TEXT(Opportunity__r.Amount), 3), 
12, LEFT(TEXT(Opportunity__r.Amount), 3) &amp; "," &amp; MID(TEXT(Opportunity__r.Amount), 4,3) &amp; "," &amp; MID(TEXT(Opportunity__r.Amount), 7, 3) &amp; "," &amp; RIGHT(TEXT(Opportunity__r.Amount), 3), 
null) 
&amp;" " &amp; TEXT(Opportunity__r.CurrencyIsoCode)</formula>
    <label>Opportunity Est Disc Sales</label>
    <type>Text</type>
</CustomField>