force-app/main/default/objects/Case/fields/Requested_Service__c.field-meta.xml
<CustomField>
    <fullName>Requested_Service__c</fullName>
    <label>Requested Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>