force-app/main/default/objects/Case/fields/Service_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Service_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>