force-app/main/default/objects/Case/fields/Service_Requested_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Requested_By_Name__c</fullName>
    <formula>Service_Requested_By__r.FirstName &amp; " " &amp; Service_Requested_By__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Requested By Name</label>
    <type>Text</type>
</CustomField>